--- a/mock_server/code/myapp_2/public/css/style.css
+++ b/mock_server/code/myapp_2/public/css/style.css
@@ -50,6 +50,7 @@ body {
   background-color: #fff;
   min-height: 400px;
   /*border: 1px solid #ccc;*/
+  width: 70%;
   box-shadow: 0 3px 5px #e8e9e9 inset, 1px 3px 3px rgba(150,152,153,0.3);
   background:
         linear-gradient(to left bottom, transparent 50%, rgba(0,0,0,.4) 0) 100% 0 no-repeat,
@@ -63,18 +64,85 @@ body {
 }
 .conreq-ti {
   position: absolute;
-  /*top: -4px;*/
   left: -1px;
   height: 46px;
   line-height: 46px;
   text-align: center;
 }
 .conreq-ti h3 {
-  padding: 0 60px 0 60px;
+  width: 200%;
+  text-align: center;
   height: auto;
   line-height: 46px;
   background: #555b65;
   color: #fff;
   font-size: 16px;
   font-family: "Microsoft YaHei";
+}
+.reqContent {
+  margin: 0 auto;
+  padding-top: 18px;
+}
+.paramsLabel {
+  text-align: right;
+  font-weight: bolder;
+  font-size: 12px;
+  color: #666666;
+  margin-top: 10px;
+}
+.paramsInput {
+  border-radius: 0 !important;
+  border: none !important;
+  border-bottom: 1px solid rgba(80, 80, 80, 1) !important;
+  /*box-shadow: 0px 2px 4px #888888 !important;*/
+  text-align: center;
+}
+.paramsInput:focus {
+  border: none !important;
+  border-bottom: 1px solid rgba(80, 80, 80, 1) !important;
+  /*box-shadow: 0px 2px 4px #888888 !important;*/
+  text-align: center;
+}
+.paramsInputShort{
+  border-radius: 0 !important;
+  border: none !important;
+  border-bottom: 1px solid rgba(80, 80, 80, 1) !important;
+  text-align: center;
+}
+.paramsInputShort::-webkit-input-placeholder, .paramsInputShort::-ms-input-placeholder, .paramsInputShort::-moz-placeholder{
+  font-style: oblique;
+}
+.paramsSelect {
+  border: none !important;
+  border-bottom: 1px solid rgba(80, 80, 80, 1) !important;
+  box-shadow: 0px 2px 4px #888888 !important;
+  text-align: center;
+}
+
+.dynamic-delete-button {
+  cursor: pointer;
+  position: relative;
+  top: 4px;
+  font-size: 20px;
+  color: #999;
+  transition: all .3s;
+}
+.dynamic-delete-button:hover {
+  color: #777;
+}
+.dynamic-delete-button[disabled] {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+.dynamic-plus-button {
+  cursor: pointer;
+  position: relative;
+  top: 4px;
+  font-size: 20px;
+  color: #999;
+  transition: all .3s;
+  left: 5px;
+}
+.dynamic-plus-button:hover {
+    color: #777;
 }
