--- a/mock_server/code/myapp_2/views/index.ejs
+++ b/mock_server/code/myapp_2/views/index.ejs
@@ -9,7 +9,8 @@
 	<div id="app">
 		
 	</div>
-	<script src="/js/bundle.js"></script>
+	<!-- <script src="/js/bundle.js"></script> -->
+	<script src="http://127.0.0.1:3030/js/bundle.js"></script>
 	<!-- <script src="../src/pages/app.js"></script> -->
 </body>
 </html>
