--- a/mock_server/code/myapp_配置页面/src/components/Layout/Layout.css
+++ b/mock_server/code/myapp_配置页面/src/components/Layout/Layout.css
@@ -8,7 +8,7 @@ body {
   font-family: var(--font-family-base);
   font-weight: var(--font-weight-light);
   font-size: var(--font-size-base);
-  background-color: var(--color-bg);
+  background-color: var(--color-white);
   color: var(--color-light-black);
   line-height: var(--line-height-chinese);
 }
