数据类型为int、regex、bool、string、email、url、ip、日期和地址时，key和value的级联

--- a/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
+++ b/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
@@ -229,3 +229,14 @@
   outline: none;
 }
 
+.noteTips {
+  color: grey !important;
+  font-size: 13px !important;
+  margin-top: 10px;
+}
+
+.arrLabel {
+  font-size: 12px !important;
+  margin-top: 10px;
+}
+
