--- a/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
+++ b/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
@@ -240,3 +240,23 @@
   margin-top: 10px;
 }
 
+.reqSave {
+  text-align: center;
+  margin-top: 36px;
+}
+
+.reqSave Button{
+  margin: 0 10px 36px 10px;
+  width: 10%;
+}
+
+.addRes {
+    float: right;
+    margin-right: 12%;
+    border: 1px dotted #000;
+    margin-top: 1%;
+    width: 10%;
+    letter-spacing: 3px;
+    text-align: center;
+    background-color: #fff;
+}
