--- a/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
+++ b/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
@@ -235,6 +235,12 @@
   margin-top: 10px;
 }
 
+.noteTips_2 {
+  color: grey !important;
+  font-size: 13px !important;
+  padding-top: 10px;
+}
+
 .arrLabel {
   font-size: 12px !important;
   margin-top: 10px;
