未添加数组存值响应的功能

--- a/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
+++ b/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
@@ -280,3 +280,13 @@
   background-color: #C1D5EB;
   border-bottom: 1px dashed;
 }
+
+.resDel {
+  text-align: center;
+  margin-bottom: 18px;
+}
+
+.resDel Button {
+  font-size: 14px;
+  color: #FFF;
+}
