--- a/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
+++ b/mock_server/code/myapp_配置页面/src/components/Content/contentReq/contentReqCss/ContentReqCss.css
@@ -247,14 +247,15 @@
   margin-top: 10px;
 }
 
-.reqSave {
+.reSave {
   text-align: center;
   margin-top: 36px;
+  padding-bottom: 46px;
 }
 
-.reqSave Button{
+.reSave Button{
   margin: 0 10px 36px 10px;
-  width: 10%;
+  width: 12%;
 }
 
 .resStyle {
@@ -289,4 +290,12 @@
 .resDel Button {
   font-size: 14px;
   color: #FFF;
+}
+
+.constraintD {
+  padding-bottom: 24px;
+}
+
+.redtag {
+  color: red;
 }
