--- a/mock_server/code/myapp/src/components/SearchRules/SearchRules.css
+++ b/mock_server/code/myapp/src/components/SearchRules/SearchRules.css
@@ -13,13 +13,13 @@
 }
 .projname {
 	float: left;
-	width: 380px;
-	/*width: 26%;*/
+	/*width: 380px;*/
+	width: 35%;
 }
 .rulename {
 	float: left;
-	width: 380px;
-	/*width: 26%;*/
+	/*width: 380px;*/
+	width: 35%;
 }
 .searchBtn {
 	float: left;
@@ -42,3 +42,24 @@
 
 
 /*查询结果组件的样式*/
+
+/*详细规则展示*/
+.showdetailrules {
+	margin-left: 142px;
+    margin-right: 142px;
+    height: 100%;
+    padding-top: 80px;
+}
+.table {
+	border: 1px solid #D5D5D5;
+}
+.tr {
+	box-sizing: border-box;
+}
+.tr td{
+	padding: 16px 8px;
+	border-right: 1px solid #e9e9e9;
+	border-bottom: 1px solid #e9e9e9;
+	width: 80px;
+    word-break: break-all;
+}
