--- a/mock_server/code/myapp/src/components/SearchRules/SearchRules.css
+++ b/mock_server/code/myapp/src/components/SearchRules/SearchRules.css
@@ -60,6 +60,16 @@
 	padding: 16px 8px;
 	border-right: 1px solid #e9e9e9;
 	border-bottom: 1px solid #e9e9e9;
-	width: 80px;
     word-break: break-all;
+}
+.tdd1{
+	font-weight: bolder !important;
+	font-size: 18px !important;
+	color: #000;
+	width: 160px;
+	text-align: right;
+}
+.tdd2 {
+	min-width: 500px;
+	text-align: center;
 }
