--- a/mock_server/code/myapp/src/components/Navigation/Navigation.css
+++ b/mock_server/code/myapp/src/components/Navigation/Navigation.css
@@ -1,78 +1,6 @@
-@import '../variables.css';
-
-.root {
-  height: 64px;
-  background-color: var(--color-white);
-}
-
-.container {
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-}
-
-.tabs {
-  flex: 0 0 376px;
-  width: 376px;
-  height: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  font-size: var(--font-big);
-  font-family: var(--font-family-base);
-  font-weight: var(--font-weight-normal);
-
-  /*& > .tab {
-    position: relative;
-    flex: none;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: var(--color-weak-black);
-
-    &.active {
-      font-family: var(--font-family-bold);
-      color: var(--color-red);
-
-      &:after {
-        content: '';
-        position: absolute;
-        width: 100%;
-        height: 4px;
-        left: 0;
-        bottom: 0;
-        background-color: var(--color-red);
-      }
-    }
-  }*/
-
-  & > .tab {
-    position: relative;
-    flex: none;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: var(--color-weak-black);
-
-    &:after {
-      content: '';
-      position: absolute;
-      width: 0;
-      height: 4px;
-      left: 50%;
-      bottom: 0;
-      background-color: var(--color-red);
-      transform: translate(-50%, 0);
-      transition: width .2s ease;
-    }
-
-    &.active {
-      font-family: var(--font-family-bold);
-      color: var(--color-red);
-
-      &:after {
-        width: 100%;
-      }
-    }
-  }
+.navbar {
+  padding-top: 80px;
+  padding-left: 142px;
+  padding-right: 142px;
+  margin-bottom: -18px;
 }
